--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-pyTelegramBotAPI
-aiohttp
-requests
-pandas
-numpy
-pillow
-matplotlib
-openai
-flask
-urllib3
-python-dotenv
+pyTelegramBotAPI==4.16.1
+requests==2.31.0
+pandas==2.2.3
+numpy==1.26.4
+Pillow==10.1.0
+openai==1.0.0
+flask==2.3.3
+urllib3==2.1.0
