--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-pyTelegramBotAPI==4.16.1
+--only-binary=:all:
+telebot==0.0.5
+pyTelegramBotAPI==4.12.0
+flask==3.0.2
+pandas==2.2.2
 requests==2.32.3
-pandas==2.2.3
+pillow==10.3.0
 numpy==1.26.4
-Pillow==10.1.0
-openai==1.44.0
-urllib3==2.1.0
-flask==2.3.3
-python-dotenv==1.0.1
+openai==1.3.7
+beautifulsoup4==4.12.3
+lxml==5.2.1
+ccxt==4.3.15
+yfinance==0.2.40
