--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 --only-binary=:all:
-telebot==0.0.5
-pyTelegramBotAPI==4.12.0
-flask==3.0.2
-pandas==2.2.2
+
+pyTelegramBotAPI==4.23.0
+Flask==3.0.3
+pandas==2.2.3
 requests==2.32.3
-pillow==10.3.0
+Pillow==10.4.0
 numpy==1.26.4
-openai==1.3.7
+openai==1.44.0
 beautifulsoup4==4.12.3
-lxml==5.2.1
-ccxt==4.3.15
-yfinance==0.2.40
+lxml==5.3.0
+ccxt==4.3.89
+yfinance==0.2.44
+gunicorn==23.0.0
