--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 --only-binary=:all:
-telebot==0.0.5
+
 pyTelegramBotAPI==4.23.0
-flask==3.0.2
+Flask==3.0.3
 pandas==2.2.3
 requests==2.32.3
-pillow==10.3.0
+Pillow==10.4.0
 numpy==2.3.3
-openai==1.3.7
+openai==1.44.0
 beautifulsoup4==4.12.3
-lxml==5.2.1
-ccxt==4.3.15
+lxml==5.3.0
+ccxt==4.3.89
 peewee==3.17.6
-yfinance==0.2.40
+yfinance==0.2.44
+gunicorn==23.0.0
