--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,5 @@ openai==1.44.0
 beautifulsoup4==4.12.3
 lxml==5.3.0
 ccxt==4.3.89
-peewee==3.17.6
-yfinance==0.2.44
+yfinance==0.2.40 --no-deps
 gunicorn==23.0.0
