--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
---only-binary=:all:
-
-pyTelegramBotAPI==4.23.0
-Flask==3.0.3
-pandas==2.2.3
+telebot==0.0.5
+Flask==3.0.2
+pandas==2.2.2
 requests==2.32.3
-Pillow==10.4.0
-numpy==2.3.3
-openai==1.44.0
+pillow==10.3.0
+numpy==2.3.0
 beautifulsoup4==4.12.3
-lxml==5.3.0
-ccxt==4.3.89
-gunicorn==23.0.0
+lxml==5.2.1
+ccxt==4.3.15
+yfinance==0.2.40
+httpx>=0.27.0
+openai>=1.35.0
